feat: P4ADEV-2122-updated-getIngestionFlowFiles (#37)
Co-authored-by: mscarsel <marco.scarsella@nttdata.com>